fix backported features for 1.20.1 and regenerate data